[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "commandcenter"
description = "Hub for data integration and event handling."
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Chris Newville", email = "chrisnewville1396@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "hyprxa",
    "aiohttp",
    "pywin32",
    "bonsai",
    "uplink"
]
dynamic = ["readme", "version"]

[project.urls]
Changelog = "https://github.com/newvicx/commandcenter/blob/master/CHANGELOG.md"
Homepage = "https://github.com/newvicx/commandcenter"
Source = "https://github.com/newvicx/commandcenter"

[tool.hatch.version]
path = "commandcenter/__version__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/commandcenter",
    "/CHANGELOG.md",
    "/README.md",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
text = "\n## Release Information\n\n"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "CHANGELOG.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
text = "\n---\n\n[Full changelog](https://pig.abbvienet.com/newvicx/commandcenter/blob/master/CHANGELOG.md)\n"